# trade-simulator

./: CMakeLists.txt  README.md
docs/: MODELS_AND_ALGORITHMS.md
src/: main.cpp  models.cpp  models.h  orderbook.cpp  orderbook.h  ui.cpp  ui.h  ui_dx11.cpp  ui_sdl.cpp  websocket_client.cpp  websocket_client.h  websocket_client_impl.cpp
tests/: benchmark_tests.cpp  integration_test.cpp  model_validation_tests.cpp  performance_tests.cpp
